--- a/public/index.html
+++ b/public/index.html
@@ -49,26 +49,22 @@
             </h3>
         </div>
         <div class="text-left">
-            <strong class="subtitle">Lavorare bene</strong><br>
+            <h3 class="subtitle">Lavorare bene</h3>
             <div>
                 Il Software, come ogni prodotto, deve essere ben progettato dalla base fino ai dettagli.<br>
                 Solo in questo modo lo strumento sarà davvero un aiuto, non più un costo, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.
             </div>
         </div>
-        <br>
-        <br>
         <div class="text-right">
-            <strong class="subtitle">Formazione</strong><br>
+            <h3 class="subtitle">Formazione</h3>
             <div>
                 Per poter fornire il miglior Software possibile mi tengo sempre aggiornato sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.
                 <br>
                 Inoltre, grazie alla mia esperienza di lavoro in Team, presto sempre particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni del Software.
             </div>
         </div>
-        <br>
-        <br>
         <div class="text-left">
-            <strong class="subtitle">Condivisione</strong><br>
+            <h3 class="subtitle">Condivisione</h3>
             <div>
                 Credo fortemente che condividere la propria conoscenza ed esperienza sia la strada per
                 ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici
