rimossa newline inutile

--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,7 @@
             </h3>
         </div>
         <div class="text-center">
-            Se vuoi contattarmi per approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto.<br>
-            Ti risponderò al più presto!<br><br>
+            Se vuoi contattarmi per approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto, ti risponderò al più presto!<br><br>
         </div>
         <div class="contact">
             <form id="contactForm">
