--- a/public/index.html
+++ b/public/index.html
@@ -266,7 +266,8 @@
     }
 
     #submit {
-        padding: 6pt;
+        padding: 12pt;
+        width: 40%;
         line-height: 24pt;
         font-size: 16pt;
         color: white;
@@ -392,6 +393,10 @@
 
         .topbar {
             font-size: 40px;
+        }
+
+        #submit {
+            width: 80%;
         }
 
     }
