--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,9 @@
     }
 
     hr {
-        border: 1px solid #94D1EB;
+        border: 0;
+        height: 3px;
+        background: linear-gradient(120deg,#94D1EB 0,#6069AB 100%);
     }
 
     input {
