--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
 <div class="container page">
     <div class="container">
         <div class="text-center">
-            <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR).
+            <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).
                 <br>
                 <br>
                 <img src="./images/profile.jpeg" class="profile">
                 <br>
                 <br>
                 Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br><br>
-                Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo
+                Durante la mia esperienza come sviluppatore, <span class="keyword">Team Leader</span> e <span class="keyword">Project Manager</span> ho collaborato e gestito lo
                 sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI
                 industriali e commerciali alle multinazionali.
             </div>
@@ -33,7 +33,7 @@
                 Cosa faccio?
             </h3>
             <div>
-                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come PHP e Javascript su sistemi Linux.
+                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come <span class="keyword">PHP</span> e <span class="keyword">Javascript</span> su sistemi <span class="keyword">Linux</span>.
             </div>
         </div>
         <br>
@@ -49,13 +49,13 @@
             <h3 class="subtitle">Lavorare bene</h3>
             <div>
                 Il Software, come ogni prodotto, deve essere ben progettato dalla base fino ai dettagli.<br>
-                Solo in questo modo lo strumento sarà davvero un aiuto, non più un costo, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.
+                Solo in questo modo lo strumento sarà davvero un aiuto, <span class="keyword">non più un costo</span>, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.
             </div>
         </div>
         <div class="text-right">
             <h3 class="subtitle">Formazione</h3>
             <div>
-                Per poter fornire il miglior Software possibile mi tengo sempre aggiornato sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.
+                Per poter fornire il miglior Software possibile mi tengo <span class="keyword">sempre aggiornato</span> sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.
                 <br>
                 Inoltre, grazie alla mia esperienza di lavoro in Team, presto sempre particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni del Software.
             </div>
@@ -64,8 +64,8 @@
             <h3 class="subtitle">Condivisione</h3>
             <div>
                 Credo fortemente che condividere la propria conoscenza ed esperienza sia la strada per
-                ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici
-                ho contribuito a fondare la Community di Sviluppatori "CremaWeb".<br><br>
+                ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici,
+                ho contribuito a fondare la <span class="keyword">Community di Sviluppatori "CremaWeb".</span><br><br>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
             </h3>
         </div>
         <div class="text-center">
-            Se vuoi contattarmi per approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto, ti risponderò al più presto!<br><br>
+            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi pure nella form che trovi qua sotto, ti risponderò al più presto!<br><br>
         </div>
         <div class="contact">
             <form id="contactForm">
@@ -258,6 +258,11 @@
     .subtitle {
         color: #94D1EB;
         font-weight: 100;
+    }
+
+    .keyword {
+        color: #6069AB;
+        font-weight: 600;
     }
 
     .profile {
