button font-weight

--- a/public/index.html
+++ b/public/index.html
@@ -281,6 +281,7 @@
         color: white;
         background-color: #6069AB;
         border: 0;
+        font-weight: 600;
     }
 
     #successDiv {
