--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Guido Sangiovanni - Freelance Web Developer</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie open source.">
+    <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie Open Source.">
     <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
     <meta name="theme-color" content="#94D1EB">
 </head>
@@ -86,7 +86,7 @@
             </h3>
         </div>
         <div class="text-center">
-            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi pure nella form che trovi qua sotto, ti risponderò al più presto!<br><br>
+            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nella form che trovi qua sotto.<br><br>
         </div>
         <div class="contact">
             <form id="contactForm">
