--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
             </h3>
         </div>
         <div class="text-center">
-            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nella form che trovi qua sotto.<br><br>
+            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nel form che trovi qua sotto.<br><br>
         </div>
         <div class="contact">
             <form id="contactForm">
