--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
             </h3>
         </div>
         <div class="text-center">
-            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nel form che trovi qua sotto.<br><br>
+            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nel form che trovi qui sotto.<br><br>
         </div>
         <div class="contact">
             <form id="contactForm">
@@ -360,6 +360,22 @@
 
         .profile {
             max-width: 220px;
+        }
+
+        .text-right {
+            text-align: center;
+        }
+
+        .text-left {
+            text-align: center;
+        }
+
+        .text-right div {
+            text-align: center;
+        }
+
+        .text-left div {
+            text-align: center;
         }
 
         #submit {
