--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
             <div>
                 Credo fortemente che condividere la propria conoscenza ed esperienza sia la strada per
                 ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici,
-                ho contribuito a fondare la <span class="keyword">Community di Sviluppatori "CremaWeb".</span><br><br>
+                ho contribuito a fondare la <span class="keyword">Community di Sviluppatori "CremaWeb"</span>.<br><br>
             </div>
         </div>
     </div>
@@ -376,6 +376,7 @@
 
         .text-left div {
             text-align: center;
+
         }
 
         #submit {
