--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Guido Sangiovanni - Freelance Web Developer</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie Open Source.">
+    <meta name="image" content="./images/profile.jpeg">
     <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
     <meta name="theme-color" content="#94D1EB">
 </head>
