--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie Open Source.">
     <meta name="image" content="./images/profile.jpeg">
     <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
+    <meta name="author" content="Guido Sangiovanni">
+    <meta http-equiv="Content-Language" content="it">
     <meta name="theme-color" content="#94D1EB">
 </head>
 <body>
