--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <div class="container page">
     <div class="container">
         <div class="text-center">
-            <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).
+            <div class="always-center">Sono Guido Sangiovanni, uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).
                 <br>
                 <br>
                 <img src="./images/profile.jpeg" class="profile">
@@ -32,7 +32,7 @@
         </div>
         <br>
         <div class="text-center">
-            <h3>
+            <h3 class="always-center">
                 Cosa faccio?
             </h3>
             <div>
@@ -43,11 +43,9 @@
     </div>
     <hr>
     <div class="container">
-        <div style="text-align: center">
-            <h3>
-                In cosa credo?
-            </h3>
-        </div>
+        <h3 class="always-center">
+            In cosa credo?
+        </h3>
         <div class="text-left">
             <h3 class="subtitle">Lavorare bene</h3>
             <div>
@@ -75,7 +73,9 @@
     <hr>
     <div class="container">
         <div class="text-center">
-            <h3>Dove sono?</h3>
+            <h3 class="always-center">
+                Dove sono?
+            </h3>
             Abito e lavoro a Bagnolo Cremasco (CR).<br><br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.4065503180996!2d9.614184515980336!3d45.360790579100005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47813009feec99af%3A0x1ccd3e450d8601e5!2sVia%20Alcide%20De%20Gasperi%2C%2022%2C%2026010%20Bagnolo%20Cremasco%20CR!5e0!3m2!1sen!2sit!4v1580673299802!5m2!1sen!2sit" width="100%" height="320" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
@@ -83,11 +83,9 @@
     <br>
     <hr>
     <div class="container">
-        <div class="text-center">
-            <h3>
-                Contattami
-            </h3>
-        </div>
+        <h3 class="always-center">
+            Contattami
+        </h3>
         <div class="text-center">
             Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nel form che trovi qui sotto.<br><br>
         </div>
@@ -199,6 +197,10 @@
 
     .text-right div {
         text-align: right;
+    }
+
+    .always-center {
+        text-align: center;
     }
 
     .container {
@@ -374,12 +376,16 @@
         }
 
         .text-right div {
-            text-align: center;
+            text-align: left;
         }
 
         .text-left div {
-            text-align: center;
+            text-align: left;
 
+        }
+
+        .text-center {
+            text-align: left;
         }
 
         #submit {
