--- a/public/index.html
+++ b/public/index.html
@@ -18,19 +18,21 @@
 <div class="container page">
     <div class="container">
         <div class="text-center">
-            <div class="always-center">Sono Guido Sangiovanni, uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).
+            <div class="always-center">
+                Sono Guido Sangiovanni, uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).
                 <br>
                 <br>
                 <img src="./images/profile.jpeg" class="profile">
                 <br>
                 <br>
-                Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br><br>
+            </div>
+            <div class="text-center">
+                Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
                 Durante la mia esperienza come sviluppatore, <span class="keyword">Team Leader</span> e <span class="keyword">Project Manager</span> ho collaborato e gestito lo
                 sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI
                 industriali e commerciali alle multinazionali.
             </div>
         </div>
-        <br>
         <div class="text-center">
             <h3 class="always-center">
                 Cosa faccio?
