--- a/public/index.html
+++ b/public/index.html
@@ -268,7 +268,7 @@
     }
 
     .keyword {
-        color: #6069AB;
+        filter: drop-shadow(0 0 0.3rem #94D1EB);
         font-weight: 600;
     }
 
