--- a/public/index.html
+++ b/public/index.html
@@ -268,15 +268,15 @@
     }
 
     .keyword {
-        filter: drop-shadow(0 0 0.3rem #94D1EB);
+        filter: drop-shadow(0 0 0.2rem black);
         font-weight: 600;
     }
 
     .profile {
         max-width:300px;
-        border: 1px solid #999999;
+        border: 1px solid #323232;
         border-radius: 2em;
-        filter: drop-shadow(0 0 0.6rem white);
+        filter: drop-shadow(0 0 0.6rem black);
         opacity: 0.7;
     }
 
