--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,7 @@
         border: 0;
         height: 3px;
         background: linear-gradient(120deg,#94D1EB 0,#6069AB 100%);
+        width: 100%;
     }
 
     input {
