--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 Cosa faccio?
             </h3>
             <div>
-                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come <span class="keyword">PHP</span> e <span class="keyword">Javascript</span> su sistemi <span class="keyword">Linux</span>.
+                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come <span class="keyword">PHP</span> (Symfony, Laravel, ...) e <span class="keyword">Javascript</span> (Node.js, Vue.js) su sistemi <span class="keyword">Linux</span>.
             </div>
         </div>
         <br>
@@ -271,6 +271,7 @@
     .keyword {
         filter: drop-shadow(0 0 0.2rem black);
         font-weight: 600;
+        text-decoration: underline;
     }
 
     .profile {
