--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
             Contattami
         </h3>
         <div class="text-center">
-            Se vuoi contattarmi per <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi nel form che trovi qui sotto.<br><br>
+            Se vuoi <span class="keyword">approfondire</span> i temi di cui mi occupo o ti serve un <span class="keyword">preventivo</span>, scrivimi tramite il form qui sotto.<br><br>
         </div>
         <div class="contact">
             <form id="contactForm">
