cursor pointer su submit

--- a/public/index.html
+++ b/public/index.html
@@ -284,6 +284,7 @@
 
     #submit {
         padding: 12pt;
+        cursor: pointer;
         width: 40%;
         line-height: 24pt;
         font-size: 16pt;
