--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <div class="container">
         <div class="text-center">
             <div class="always-center">
-                Sono Guido Sangiovanni, uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).
+                Sono uno sviluppatore Web <span class="keyword">Freelance</span> residente a Crema (CR).<br><br>
+                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come <span class="keyword">PHP</span> (Symfony, Laravel, ...) e <span class="keyword">Javascript</span> (Node.js, Vue.js) su sistemi <span class="keyword">Linux</span>.
                 <br>
                 <br>
                 <img src="./images/profile.jpeg" class="profile">
@@ -33,14 +34,6 @@
                 industriali e commerciali alle multinazionali.
             </div>
         </div>
-        <div class="text-center">
-            <h3 class="always-center">
-                Cosa faccio?
-            </h3>
-            <div>
-                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come <span class="keyword">PHP</span> (Symfony, Laravel, ...) e <span class="keyword">Javascript</span> (Node.js, Vue.js) su sistemi <span class="keyword">Linux</span>.
-            </div>
-        </div>
         <br>
     </div>
     <hr>
@@ -51,8 +44,8 @@
         <div class="text-left">
             <h3 class="subtitle">Lavorare bene</h3>
             <div>
-                Il Software, come ogni prodotto, deve essere ben progettato dalla base fino ai dettagli.<br>
-                Solo in questo modo lo strumento sarà davvero un aiuto, <span class="keyword">non più un costo</span>, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.
+                Il Software, come ogni prodotto, deve essere progettato e costruito bene facendo attenzione ad ogni dettaglio.<br>
+                Solo in questo modo sarà davvero uno strumento utile, <span class="keyword">non più un costo</span>, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.
             </div>
         </div>
         <div class="text-right">
@@ -60,7 +53,7 @@
             <div>
                 Per poter fornire il miglior Software possibile mi tengo <span class="keyword">sempre aggiornato</span> sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.
                 <br>
-                Inoltre, grazie alla mia esperienza di lavoro in Team, presto sempre particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni del Software.
+                Inoltre, grazie alla mia esperienza di <span class="keyword">lavoro in Team</span>, presto sempre particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni del Software.
             </div>
         </div>
         <div class="text-left">
@@ -68,7 +61,7 @@
             <div>
                 Credo fortemente che condividere la propria conoscenza ed esperienza sia la strada per
                 ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici,
-                ho contribuito a fondare la <span class="keyword">Community di Sviluppatori "CremaWeb"</span>.<br><br>
+                ho contribuito a fondare la <span class="keyword"><a href="https://cremaweb.org">Community di Sviluppatori "CremaWeb"</a></span>.<br><br>
             </div>
         </div>
     </div>
@@ -180,6 +173,11 @@
         border: 0;
         color: white;
         line-height: 22pt;
+    }
+
+    a  {
+        text-decoration: none;
+        color: white;
     }
 
     .text-left {
