--- a/public/index.html
+++ b/public/index.html
@@ -303,11 +303,10 @@
         top: 10pt;
         left: calc(50vw - 150px);
         width: 300px;
-        height: 35px;
+        height: 60px;
         background-color: #94D1EB;
         color: black;
         opacity: 0.9;
-        border: 1px solid #64A9BA;
         border-radius: 0.2em;
         visibility: hidden;
     }
@@ -440,8 +439,10 @@
                     $('[name="nome"]').val('');
                     $('[name="email"]').val('');
                     $('[name="messaggio"]').val('');
-                    showSuccessDiv();
-                    setTimeout(hideSuccessDiv, 2500);
+                    if (response.success) {
+                        showSuccessDiv();
+                        setTimeout(hideSuccessDiv, 2500);
+                    }
                 }
             })
         });
