--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
         background-color: #454545;
         color: white;
         margin: 0 1.2vw 2vw 1.2vw;
-        filter: drop-shadow(5px 5px 0.3rem #565656);
+        filter: drop-shadow(4px 4px 0.3rem black);
         border-radius: 0.2em;
     }
 
